--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SoftUni Blog</title>
+    <title>My Blog(.bg)</title>
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/jquery-1.10.2.js"></script>
     <script src="scripts/bootstrap.js"></script>
@@ -35,19 +35,12 @@
                     <div class="col-md-6">
                         <article>
                             <header>
-                                <h2>Hello</h2>
+                                <h2>Hello there</h2>
                             </header>
 
 
                             <p>
-                                tag and some sample texttag and some sample texttag and some sample text
-                                tag and some sample texttag and some sample texttag and some sample text
-                                tag and some sample texttag and some sample texttag and some sample text
-                                tag and some sample texttag and some sample texttag and some sample text
-                                tag and some sample texttag and some sample texttag and some sample text
-                                tag and some sample texttag and some sample texttag and some sample text
-                                tag and some sample texttag and some sample texttag and some sample text
-                                tag and some sample texttag and some sample texttag and some sample text
+                                Register to make your own posts or if you have account login.It's free and
                             </p>
 
                             <small class="author">
