--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="navbar navbar-default navbar-fixed-top text-uppercase">
                 <div class="container">
                     <div class="navbar-header">
-                        <a  href="index.html" class="navbar-brand">SoftUni Blog</a>
+                        <a  href="index.html" class="navbar-brand">Your Blog</a>
 
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
@@ -40,7 +40,8 @@
 
 
                             <p>
-                                Register to make your own posts or if you have account login.It's free and
+                                Register to make your own posts or if you have account login.You can make your own blog
+                                whom can be seen by other people with registration.
                             </p>
 
                             <small class="author">
